[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Environment/TileSet/LPC_house_interior/interior.png" type="Texture" id=1]
[ext_resource path="res://Scripts/InteriourHouse1.gd" type="Script" id=2]

[sub_resource type="TileSet" id=1]
0/name = "interior.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 480, 416 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 17.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 18 )

[node name="InteriourHouse1" type="Node2D"]
script = ExtResource( 2 )

[node name="FloorAndWall" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -327686, 0, 65539, -327685, 0, 65539, -327684, 0, 65539, -327683, 0, 65539, -327682, 0, 65539, -327681, 0, 65539, -393216, 0, 65539, -393215, 0, 65539, -393214, 0, 65539, -393213, 0, 65539, -393212, 0, 65539, -393211, 0, 65539, -393210, 0, 65539, -393209, 0, 65539, -393208, 0, 65539, -393207, 0, 65539, -393206, 0, 65539, -393205, 0, 65539, -393204, 0, 65539, -393203, 0, 65539, -393202, 0, 65539, -393201, 0, 65539, -393200, 0, 65539, -393199, 0, 65539, -393198, 0, 65539, -393197, 0, 65539, -393196, 0, 65539, -393195, 0, 65539, -262150, 0, 65539, -262149, 0, 65539, -262148, 0, 65539, -262147, 0, 65539, -262146, 0, 65539, -262145, 0, 65539, -327680, 0, 65539, -327679, 0, 65539, -327678, 0, 65539, -327677, 0, 65539, -327676, 0, 65539, -327675, 0, 65539, -327674, 0, 65539, -327673, 0, 65539, -327672, 0, 65539, -327671, 0, 65539, -327670, 0, 65539, -327669, 0, 65539, -327668, 0, 65539, -327667, 0, 65539, -327666, 0, 65539, -327665, 0, 65539, -327664, 0, 65539, -327663, 0, 65539, -327662, 0, 65539, -327661, 0, 65539, -327660, 0, 65539, -327659, 0, 65539, -196614, 0, 65539, -196613, 0, 65539, -196612, 0, 65539, -196611, 0, 65539, -196610, 0, 65539, -196609, 0, 65539, -262144, 0, 65539, -262143, 0, 65539, -262142, 0, 65539, -262141, 0, 65539, -262140, 0, 65539, -262139, 0, 65539, -262138, 0, 65539, -262137, 0, 65539, -262136, 0, 65539, -262135, 0, 65539, -262134, 0, 65539, -262133, 0, 65539, -262132, 0, 65539, -262131, 0, 65539, -262130, 0, 65539, -262129, 0, 65539, -262128, 0, 65539, -262127, 0, 65539, -262126, 0, 65539, -262125, 0, 65539, -262124, 0, 65539, -262123, 0, 65539, -131078, 0, 65539, -131077, 0, 65539, -131076, 0, 65539, -131075, 0, 65539, -131074, 0, 65539, -131073, 0, 65539, -196608, 0, 65539, -196607, 0, 65539, -196606, 0, 65539, -196605, 0, 65539, -196604, 0, 65539, -196603, 0, 65539, -196602, 0, 65539, -196601, 0, 65539, -196600, 0, 65539, -196599, 0, 65539, -196598, 0, 65539, -196597, 0, 65539, -196596, 0, 65539, -196595, 0, 65539, -196594, 0, 65539, -196593, 0, 65539, -196592, 0, 65539, -196591, 0, 65539, -196590, 0, 65539, -196589, 0, 65539, -196588, 0, 65539, -196587, 0, 65539, -65542, 0, 65539, -65541, 0, 65539, -65540, 0, 65539, -65539, 0, 65539, -65538, 0, 65539, -65537, 0, 65539, -131072, 0, 65539, -131071, 0, 65539, -131070, 0, 65539, -131069, 0, 65539, -131068, 0, 65539, -131067, 0, 65539, -131066, 0, 65539, -131065, 0, 65539, -131064, 0, 65539, -131063, 0, 65539, -131062, 0, 65539, -131061, 0, 65539, -131060, 0, 65539, -131059, 0, 65539, -131058, 0, 65539, -131057, 0, 65539, -131056, 0, 65539, -131055, 0, 65539, -131054, 0, 65539, -131053, 0, 65539, -131052, 0, 65539, -131051, 0, 65539, -6, 0, 65539, -5, 0, 65539, -4, 0, 65539, -3, 0, 65539, -2, 0, 65539, -1, 0, 65539, -65536, 0, 65539, -65535, 0, 65539, -65534, 0, 65539, -65533, 0, 65539, -65532, 0, 65539, -65531, 0, 65539, -65530, 0, 65539, -65529, 0, 65539, -65528, 0, 65539, -65527, 0, 65539, -65526, 0, 65539, -65525, 0, 65539, -65524, 0, 65539, -65523, 0, 65539, -65522, 0, 65539, -65521, 0, 65539, -65520, 0, 65539, -65519, 0, 65539, -65518, 0, 65539, -65517, 0, 65539, -65516, 0, 65539, -65515, 0, 65539, 65530, 0, 65539, 65531, 0, 65539, 65532, 0, 65539, 65533, 0, 65539, 65534, 0, 65539, 65535, 0, 65539, 0, 0, 65539, 1, 0, 131073, 2, 0, 131075, 3, 0, 131075, 4, 0, 131075, 5, 0, 131075, 6, 0, 131075, 7, 0, 131075, 8, 0, 131075, 9, 0, 131075, 10, 0, 131075, 11, 0, 131075, 12, 0, 131075, 13, 0, 131075, 14, 0, 131072, 15, 0, 65539, 16, 0, 65539, 17, 0, 65539, 18, 0, 65539, 19, 0, 65539, 20, 0, 65539, 21, 0, 65539, 131066, 0, 65539, 131067, 0, 65539, 131068, 0, 65539, 131069, 0, 65539, 131070, 0, 65539, 131071, 0, 65539, 65536, 0, 65539, 65537, 0, 65540, 65538, 0, 262144, 65539, 0, 262144, 65540, 0, 262144, 65541, 0, 262144, 65542, 0, 262144, 65543, 0, 262144, 65544, 0, 262144, 65545, 0, 262144, 65546, 0, 196608, 65547, 0, 196608, 65548, 0, 196608, 65549, 0, 196608, 65550, 0, 65538, 65551, 0, 65539, 65552, 0, 65539, 65553, 0, 65539, 65554, 0, 65539, 65555, 0, 65539, 65556, 0, 65539, 65557, 0, 65539, 196602, 0, 65539, 196603, 0, 65539, 196604, 0, 65539, 196605, 0, 65539, 196606, 0, 65539, 196607, 0, 65539, 131072, 0, 65539, 131073, 0, 65540, 131074, 0, 262144, 131075, 0, 262144, 131076, 0, 262144, 131077, 0, 262144, 131078, 0, 262144, 131079, 0, 262144, 131080, 0, 262144, 131081, 0, 262144, 131082, 0, 262145, 131083, 0, 262145, 131084, 0, 262145, 131085, 0, 262145, 131086, 0, 65538, 131087, 0, 65539, 131088, 0, 65539, 131089, 0, 65539, 131090, 0, 65539, 131091, 0, 65539, 131092, 0, 65539, 131093, 0, 65539, 262138, 0, 65539, 262139, 0, 65539, 262140, 0, 65539, 262141, 0, 65539, 262142, 0, 65539, 262143, 0, 65539, 196608, 0, 65539, 196609, 0, 65540, 196610, 0, 262144, 196611, 0, 262144, 196612, 0, 262144, 196613, 0, 262144, 196614, 0, 262144, 196615, 0, 262144, 196616, 0, 262144, 196617, 0, 262144, 196618, 0, 262145, 196619, 0, 262145, 196620, 0, 262145, 196621, 0, 262145, 196622, 0, 65538, 196623, 0, 65539, 196624, 0, 65539, 196625, 0, 65539, 196626, 0, 65539, 196627, 0, 65539, 196628, 0, 65539, 196629, 0, 65539, 327674, 0, 65539, 327675, 0, 65539, 327676, 0, 65539, 327677, 0, 65539, 327678, 0, 65539, 327679, 0, 65539, 262144, 0, 65539, 262145, 0, 65540, 262146, 0, 262144, 262147, 0, 262144, 262148, 0, 262144, 262149, 0, 262144, 262150, 0, 262144, 262151, 0, 262144, 262152, 0, 262144, 262153, 0, 262144, 262154, 0, 262145, 262155, 0, 262145, 262156, 0, 262145, 262157, 0, 262145, 262158, 0, 65538, 262159, 0, 65539, 262160, 0, 65539, 262161, 0, 65539, 262162, 0, 65539, 262163, 0, 65539, 262164, 0, 65539, 262165, 0, 65539, 393210, 0, 65539, 393211, 0, 65539, 393212, 0, 65539, 393213, 0, 65539, 393214, 0, 65539, 393215, 0, 65539, 327680, 0, 65539, 327681, 0, 65540, 327682, 0, 262144, 327683, 0, 262144, 327684, 0, 262144, 327685, 0, 262144, 327686, 0, 262144, 327687, 0, 262144, 327688, 0, 262144, 327689, 0, 262144, 327690, 0, 262144, 327691, 0, 262144, 327692, 0, 262144, 327693, 0, 262144, 327694, 0, 65538, 327695, 0, 65539, 327696, 0, 65539, 327697, 0, 65539, 327698, 0, 65539, 327699, 0, 65539, 327700, 0, 65539, 327701, 0, 65539, 458746, 0, 65539, 458747, 0, 65539, 458748, 0, 65539, 458749, 0, 65539, 458750, 0, 65539, 458751, 0, 65539, 393216, 0, 65539, 393217, 0, 65540, 393218, 0, 262144, 393219, 0, 262144, 393220, 0, 262144, 393221, 0, 262144, 393222, 0, 262144, 393223, 0, 262144, 393224, 0, 262144, 393225, 0, 262144, 393226, 0, 262144, 393227, 0, 262144, 393228, 0, 262144, 393229, 0, 262144, 393230, 0, 65538, 393231, 0, 65539, 393232, 0, 65539, 393233, 0, 65539, 393234, 0, 65539, 393235, 0, 65539, 393236, 0, 65539, 393237, 0, 65539, 524282, 0, 65539, 524283, 0, 65539, 524284, 0, 65539, 524285, 0, 65539, 524286, 0, 65539, 524287, 0, 65539, 458752, 0, 65539, 458753, 0, 65540, 458754, 0, 262144, 458755, 0, 262144, 458756, 0, 262144, 458757, 0, 262144, 458758, 0, 262144, 458759, 0, 262144, 458760, 0, 262144, 458761, 0, 262144, 458762, 0, 262144, 458763, 0, 262144, 458764, 0, 262144, 458765, 0, 262144, 458766, 0, 65538, 458767, 0, 65539, 458768, 0, 65539, 458769, 0, 65539, 458770, 0, 65539, 458771, 0, 65539, 458772, 0, 65539, 458773, 0, 65539, 589818, 0, 65539, 589819, 0, 65539, 589820, 0, 65539, 589821, 0, 65539, 589822, 0, 65539, 589823, 0, 65539, 524288, 0, 65539, 524289, 0, 65537, 524290, 0, 3, 524291, 0, 3, 524292, 0, 3, 524293, 0, 3, 524294, 0, 4, 524295, 0, 262144, 524296, 0, 262144, 524297, 0, 2, 524298, 0, 3, 524299, 0, 3, 524300, 0, 3, 524301, 0, 3, 524302, 0, 65536, 524303, 0, 65539, 524304, 0, 65539, 524305, 0, 65539, 524306, 0, 65539, 524307, 0, 65539, 524308, 0, 65539, 524309, 0, 65539, 655354, 0, 65539, 655355, 0, 65539, 655356, 0, 65539, 655357, 0, 65539, 655358, 0, 65539, 655359, 0, 65539, 589824, 0, 65539, 589825, 0, 65539, 589826, 0, 65539, 589827, 0, 65539, 589828, 0, 65539, 589829, 0, 65539, 589830, 0, 65540, 589831, 0, 262144, 589832, 0, 262144, 589833, 0, 65538, 589834, 0, 65539, 589835, 0, 65539, 589836, 0, 65539, 589837, 0, 65539, 589838, 0, 65539, 589839, 0, 65539, 589840, 0, 65539, 589841, 0, 65539, 589842, 0, 65539, 589843, 0, 65539, 589844, 0, 65539, 589845, 0, 65539, 720890, 0, 65539, 720891, 0, 65539, 720892, 0, 65539, 720893, 0, 65539, 720894, 0, 65539, 720895, 0, 65539, 655360, 0, 65539, 655361, 0, 65539, 655362, 0, 65539, 655363, 0, 65539, 655364, 0, 65539, 655365, 0, 65539, 655366, 0, 65540, 655367, 0, 262144, 655368, 0, 262144, 655369, 0, 65538, 655370, 0, 65539, 655371, 0, 65539, 655372, 0, 65539, 655373, 0, 65539, 655374, 0, 65539, 655375, 0, 65539, 655376, 0, 65539, 655377, 0, 65539, 655378, 0, 65539, 655379, 0, 65539, 655380, 0, 65539, 655381, 0, 65539, 786426, 0, 65539, 786427, 0, 65539, 786428, 0, 65539, 786429, 0, 65539, 786430, 0, 65539, 786431, 0, 65539, 720896, 0, 65539, 720897, 0, 65539, 720898, 0, 65539, 720899, 0, 65539, 720900, 0, 65539, 720901, 0, 65539, 720902, 0, 65540, 720903, 0, 262144, 720904, 0, 262144, 720905, 0, 65538, 720906, 0, 65539, 720907, 0, 65539, 720908, 0, 65539, 720909, 0, 65539, 720910, 0, 65539, 720911, 0, 65539, 720912, 0, 65539, 720913, 0, 65539, 720914, 0, 65539, 720915, 0, 65539, 720916, 0, 65539, 720917, 0, 65539, 851962, 0, 65539, 851963, 0, 65539, 851964, 0, 65539, 851965, 0, 65539, 851966, 0, 65539, 851967, 0, 65539, 786432, 0, 65539, 786433, 0, 65539, 786434, 0, 65539, 786435, 0, 65539, 786436, 0, 65539, 786437, 0, 65539, 786438, 0, 65540, 786439, 0, 262144, 786440, 0, 262144, 786441, 0, 65538, 786442, 0, 65539, 786443, 0, 65539, 786444, 0, 65539, 786445, 0, 65539, 786446, 0, 65539, 786447, 0, 65539, 786448, 0, 65539, 786449, 0, 65539, 786450, 0, 65539, 786451, 0, 65539, 786452, 0, 65539, 786453, 0, 65539, 917498, 0, 65539, 917499, 0, 65539, 917500, 0, 65539, 917501, 0, 65539, 917502, 0, 65539, 917503, 0, 65539, 851968, 0, 65539, 851969, 0, 65539, 851970, 0, 65539, 851971, 0, 65539, 851972, 0, 65539, 851973, 0, 65539, 851974, 0, 65540, 851975, 0, 262144, 851976, 0, 262144, 851977, 0, 65538, 851978, 0, 65539, 851979, 0, 65539, 851980, 0, 65539, 851981, 0, 65539, 851982, 0, 65539, 851983, 0, 65539, 851984, 0, 65539, 851985, 0, 65539, 851986, 0, 65539, 851987, 0, 65539, 851988, 0, 65539, 851989, 0, 65539, 983034, 0, 65539, 983035, 0, 65539, 983036, 0, 65539, 983037, 0, 65539, 983038, 0, 65539, 983039, 0, 65539, 917504, 0, 65539, 917505, 0, 65539, 917506, 0, 65539, 917507, 0, 65539, 917508, 0, 65539, 917509, 0, 65539, 917510, 0, 65540, 917511, 0, 262144, 917512, 0, 262144, 917513, 0, 65538, 917514, 0, 65539, 917515, 0, 65539, 917516, 0, 65539, 917517, 0, 65539, 917518, 0, 65539, 917519, 0, 65539, 917520, 0, 65539, 917521, 0, 65539, 917522, 0, 65539, 917523, 0, 65539, 917524, 0, 65539, 917525, 0, 65539 )

[node name="Furniture" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65538, 0, 14, 65546, 0, 196611, 65547, 0, 327682, 65548, 0, 327684, 65549, 0, 196610, 131074, 0, 65550, 131078, 0, 12, 131082, 0, 262147, 131083, 0, 327687, 131084, 0, 262148, 131085, 0, 262146, 196610, 0, 131086, 262154, 0, 262145, 262155, 0, 786432, 262156, 0, 786433, 262157, 0, 262145, 327685, 0, 12, 393225, 0, 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.48, 0.48 )

[node name="spawnPoint" type="Position2D" parent="."]
position = Vector2( 256, 251 )

[node name="doorHouse" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="doorHouse"]
position = Vector2( 257, 283 )
shape = SubResource( 2 )

[node name="Collisions" type="YSort" parent="."]

[node name="WallsCol" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/WallsCol"]
polygon = PoolVector2Array( 0, 289, 219, 288, 221, 256, 63, 256, 64, 124, 96, 124, 96, 53, 96, 41, 319, 39, 319, 83, 448, 84, 448, 254, 291, 256, 294, 288, 491, 287, 491, 2, 2, 2 )

[node name="BagCol1" type="StaticBody2D" parent="Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/BagCol1"]
position = Vector2( 176, 180.5 )
shape = SubResource( 3 )

[node name="BagCol2" type="StaticBody2D" parent="Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/BagCol2"]
position = Vector2( 304, 213 )
shape = SubResource( 3 )

[node name="BagCol3" type="StaticBody2D" parent="Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/BagCol3"]
position = Vector2( 208, 86 )
shape = SubResource( 3 )

[node name="TableCol" type="StaticBody2D" parent="Collisions"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions/TableCol"]
position = Vector2( 384, 146 )
shape = SubResource( 4 )

[connection signal="body_entered" from="doorHouse" to="." method="_on_doorHouse_body_entered"]
